Fix some lesson bugs, improve titlescreen, fix top of sentence cutoff on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -21,14 +21,76 @@ a {
   grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
   gap: 2em;
   align-items: unset;
-  text-align: justify;
   margin-left: 1em;
   margin-right: 1em;
   margin-top: 1.5em;
 }
 
-.lesson_link:hover {
+
+.lesson_item {
+  background-color: #414b61;
+  margin: 0.5em;
+  padding: 0.5em;
+  border: 0.05em solid #222833;
+  border-radius: 0.5em;
+  text-shadow: 0px 0px 10px #000;
+  box-shadow: 0px 0px 5px #111;
+  transition: background-color 0.3s ease;
+}
+
+.lesson_item:hover {
+  background-color: rgb(0, 110, 255);
+  color: #ebebeb !important;
+  text-shadow: 2px 2px 2px #000;
+  cursor: pointer;
+}
+
+.lesson_category {
+  background-color: #2d323e;
+  margin: 0.5em;
+  padding: 0.5em;
+  border: 0.05em solid #222833;
+  border-radius: 0.5em;
+  text-shadow: 0px 0px 10px #000;
+  box-shadow: 0px 0px 10px #111;
+  transition: background-color 0.3s ease;
+}
+
+.title-screen-header
+{
+  position: relative;
+  background-color: #1e2026;
+  width: 100%;
+  margin-top: 0em;
+  height: 3em;
+  padding-left: 1em;
+  text-align: left;
+  text-shadow: 0px 0px 10px #000;
+  z-index: 1;
+  user-select: none;
   text-decoration: none;
+}
+
+.title-screen-header a
+{
+  text-decoration: none;
+  margin: 0em;
+  padding: 0em;
+}
+
+.title-screen-header h1
+{
+  padding: 0em;
+  margin: 0em;
+}
+
+.github
+{
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  width: 1em;
+  height: 1em;
 }
 
 input[type="file"] {
@@ -48,10 +110,13 @@ input[type="file"] {
   border-radius: 0.2em;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  text-shadow: 0px 0px 10px #000;
+  box-shadow: 0px 0px 10px #111;
 }
 
 .upload:hover {
   background-color: rgb(0, 110, 255);
+  text-shadow: 2px 2px 2px #000;
 }
 
 .upload:active {
@@ -283,6 +348,7 @@ text-shadow: 0px 0px 10px #222;
   background-color: #282c34;
   box-shadow: 0px 1px 10px #111;
   z-index: 1;
+  margin-top: 1em;
 }
 
 .main_sentence_container2 {
